# StockwiseAI

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3597922e5e09_add_sim_order_fill_kind.py  97f4da530b0e_initial_schema.py  9d06114a8767_alerts_tables.py  a6c1e58d734b_owner_authentication.py  af0e53ed521e_watch_groups_and_ai_overviews.py  b71a4e92c013_ai_quota_reservations.py  c31fcb2c9d50_pending_order_uniqueness.py  c82b7401d4ab_durable_job_queue.py  d824a133f070_hot_path_indexes.py  d93c2f8756bc_analysis_input_hash.py  e14f97a30c52_alert_notification_outbox.py  e910cb2743f1_job_runs.py  f25a8b1c9d02_constraints_and_retention_indexes.py
backend/app/: main.py
backend/app/api/v1/: alerts.py  analysis.py  auth.py  backtest.py  health.py  (+8 more)
backend/app/core/: auth.py  config.py  db.py  envelope.py  exceptions.py  logging_config.py  quotas.yaml  rate_limiter.py  request_timing.py
backend/app/models/: __init__.py  alert.py  analysis.py  auth.py  job.py  simulation.py  stock.py  watchlist.py
backend/app/scheduler/: jobs.py
backend/app/services/: __init__.py  alert_service.py  analysis_service.py  backtest_service.py  backup_service.py  compare_service.py  dashboard_service.py  indicator_service.py  job_service.py  maintenance_service.py  market_context.py  market_gateway.py  news_service.py  prediction_service.py  premium_service.py  stock_read_service.py  sync_service.py  time_service.py  trading_calendar.py  tw_market_facts.py
backend/tests/: conftest.py  test_ai_schema.py  test_ai_timeout_routing.py  test_alert_notifications.py  test_analysis_race.py  test_auth.py  test_backtest_alerts.py  test_backup.py  test_compare.py  test_dashboard.py  test_db_pool.py  test_finmind_fallback.py  test_futures_positions.py  test_groups.py  test_health.py  test_indicators.py  test_job_runs.py  test_maintenance.py  test_market_gateway.py  test_news.py  test_night_futures.py  test_performance_contracts.py  test_prediction.py  test_premium.py  test_rate_limiter.py  test_request_timing.py  test_scheduled_overview.py  test_sentinel.py  test_simulation.py  test_stocks_api.py  test_sync_freshness.py  test_sync_service.py  test_time_service.py  test_trading_calendar.py  test_tw_market_facts.py  test_watchlist_add.py
(+89 files in other folders)
