[project]
name = "stock-ai-advisor-backend"
version = "0.1.0"
description = "AI stock analysis and paper trading backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pandas>=2.2",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "yfinance>=0.2.50",
    "exchange-calendars>=4.5",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
line-length = 100
